src/Domain/Compiler/Tests/Expression/__Baselines__/IntegerLiteral_Decimal_S64MinUnderflow-StashIr.error
error: Decimal literal cannot exceed S64_Min
--> main.hs:8:9
  | 
8 | return -9223372036854775809;    
  |         ^^^^^^^^^^^^^^^^^^^
